--- a/live.css
+++ b/live.css
@@ -1,1 +1,3 @@
-/* Add all your CSS here and save the file */
+.v-list-item__subtitle, .v-list-item__title {
+    text-overflow: inherit!important;
+}/* Add all your CSS here and save the file */
